// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for osaamisala koulutus, koulutusKoodiUri is resolved 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [
    "koulutus_371101#1",
  ],
  "koulutustyyppi": "amm-osaamisala",
  "metadata": Object {
    "avoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": Array [],
    "koulutustyyppi": "amm-osaamisala",
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tunniste": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [],
    "tyyppi": "amm-osaamisala",
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;

exports[`getKoulutusByFormValues returns correct koulutuksetKoodiUri for ammatillinen koulutus 1`] = `
Object {
  "ePerusteId": 1,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [
    "koulutuskoodi_1#1",
  ],
  "koulutustyyppi": "amm",
  "metadata": Object {
    "avoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": Array [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "amm",
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusKoodiUri": "laajuus_1#1",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tunniste": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [
      "nimike_1#1",
      "nimike_2#1",
    ],
    "tyyppi": "amm",
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;

exports[`getKoulutusByFormValues returns correct koulutus given form values 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "koulutuksetKoodiUri": Array [
    "koulutus_371101#1",
    "koulutus_201000#1",
  ],
  "koulutustyyppi": "yo",
  "metadata": Object {
    "avoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": Array [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "yo",
    "kuvaus": Object {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [
      Object {
        "otsikkoKoodiUri": "osio_1#1",
        "teksti": Object {},
      },
      Object {
        "otsikkoKoodiUri": "osio_2#1",
        "teksti": Object {
          "fi": "<p>Fi kuvaus</p>",
          "sv": "<p>Sv kuvaus</p>",
        },
      },
    ],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusKoodiUri": "laajuus_1#1",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tunniste": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [
      "nimike_1#1",
      "nimike_2#1",
    ],
    "tyyppi": "yo",
  },
  "muokkaaja": "1.1.1.1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "sorakuvausId": "1234",
  "tarjoajat": Array [
    "123.456.789",
  ],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`it should return empty array if no koulutusKoodiUri given 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [],
  "koulutustyyppi": "yo",
  "metadata": Object {
    "avoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": Array [],
    "koulutustyyppi": "yo",
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tunniste": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [],
    "tyyppi": "yo",
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;
